Layer menu / avoid having a visible scrollbar
With `height: 100%` on the .tab-content class a scrollbar would appear
in chrome while `overflow: auto` is specified. Not sure why
but setting the height to 100% is not needed here anyway.

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_mapviewer_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_mapviewer_sextant.less
@@ -1209,6 +1209,7 @@ sxt-annotations-editor {
     }
     .tab-content {
       overflow: auto;
+      height: auto; // without this, a scrollbar is always visible in chrome
     }
   }
   .sxt-layer-menu-expand-button {
